--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "safe-vex"
-version = "3.1.3"
+version = "3.2.0-experimental"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "A modular, reliable and comprehensive wrapper around the vex-rt library that never crashes."
@@ -16,3 +16,4 @@ path = "src/lib.rs"
 
 [dependencies]
 vex-rt = "0.15.1"
+libc = "0.2.154"
